--- a/Hàm 1/chuyendoinhietdo.html
+++ b/Hàm 1/chuyendoinhietdo.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Temperature Converter</h1>
 <h3>Type a value in the Fahrenheit field to convert the value to Celcius:</h3>
-<p>Fahrenheit</p><input type="number" id="nhapvao" name="" size="30" oninput="ketqua()"><br>
-<p>Celcius</p><span id="xuatra"></span>
+<p>Fahrenheit</p><input type="number" id="input" name="" size="30" oninput="result()"><br>
+<p>Celcius</p><span id="output"></span>
 </body>
 </html>
