--- a/Hàm 2/meter-feet.html
+++ b/Hàm 2/meter-feet.html
@@ -13,12 +13,12 @@
             <th>Meter</th>
         </tr>
         <tr>
-            <td><input type="number" name="a" id="meter" oninput="tinhtoan1()"></td>
-            <td><input type="number" name="b" id="feet" oninput="tinhtoan2()"></td>
+            <td><input type="number" name="a" id="meter" oninput="cal1()"></td>
+            <td><input type="number" name="b" id="feet" oninput="cal2()"></td>
         </tr>
         <tr>
-            <td><span id="ketqua1"></span></td>
-            <td><span id="ketqua2"></span></td>
+            <td><span id="result1"></span></td>
+            <td><span id="result2"></span></td>
         </tr>
     </table>
 </form>
