--- a/Mảng 1/daonguocbang.html
+++ b/Mảng 1/daonguocbang.html
@@ -7,7 +7,7 @@
 <body>
 <script>
     let x = [-3, 5, 1, 3, 2, 10];
-    document.write('Bảng x là: ' + x + '<br>');
+    document.write("Bảng x là: " + x + "<br>");
     let first = 0;
     let last = x.length - 1;
     for (first,last;first<=last;first++,last--){
@@ -15,7 +15,7 @@
         x[first]=x[last]
         x[last]=temp
     }
-    document.write('Bảng đảo ngược là: ' + x);
+    document.write("Bảng đảo ngược là: " + x);
 </script>
 </body>
 </html>
