--- a/Mảng 2/Luyện tập 2/bai2.html
+++ b/Mảng 2/Luyện tập 2/bai2.html
@@ -18,7 +18,7 @@
         }
     }
 
-    function daomang(a){
+    function reversalArr(a){
         let first = 0;
         let last = a.length - 1;
         while (first<last){
@@ -32,7 +32,7 @@
     }
     let array = new Array();
     inputArr(array);
-    document.write("Mảng đảo ngược mới là: "+daomang(array));
+    document.write("Mảng đảo ngược mới là: "+reversalArr(array));
 </script>
 </body>
 </html>
