--- a/Mảng 2/Luyện tập 2/bai3.html
+++ b/Mảng 2/Luyện tập 2/bai3.html
@@ -19,7 +19,7 @@
     }
 
     //hàm đếm số lượng số trong mảng
-    function demNum(a){
+    function countNum(a){
         let count=0;
         for (let i=0;i<a.length;i++){
             if(isNaN(a[i])==false) {
@@ -31,7 +31,7 @@
 
     let array = new Array();
     inputArr(array);
-    document.write("Số chữ số trong mảng là: " +demNum(array))
+    document.write("Số chữ số trong mảng là: " +countNum(array))
 </script>
 </body>
 </html>
