--- a/Toán tử/chuvihinhtron.html
+++ b/Toán tử/chuvihinhtron.html
@@ -6,11 +6,10 @@
 </head>
 <body>
 <script>
-    let r;
-    r = prompt('Bán kính hình tròn');
+    let r = prompt("Bán kính hình tròn là: ");
     let R = parseInt(r)
-    let C = (R+R)*3.14;
-    document.write('Chu vi hình tròn: ' + C)
+    let perimeterCircle = (R+R)*3.14;
+    document.write("Chu vi hình tròn là: " + perimeterCircle)
 </script>
 </body>
 </html>
