--- a/Toán tử/dientichhinhtron.html
+++ b/Toán tử/dientichhinhtron.html
@@ -6,10 +6,9 @@
 </head>
 <body>
 <script>
-    let r;
-    r = prompt('Bán kính hình tròn');
-    let S = r*r*3.14;
-    document.write('Diện tích hình tròn: ' + S)
+    let r = prompt("Bán kính hình tròn là: ");
+    let acreage = r*r*3.14;
+    document.write("Diện tích hình tròn: " + acreage)
 </script>
 </body>
 </html>
