--- a/Toán tử/khaibaosudungbien.html
+++ b/Toán tử/khaibaosudungbien.html
@@ -6,25 +6,24 @@
 </head>
 <body>
 <script>
-    var i=10;
-    var f=20.5;
-    var b=true;
-    var s="Hà Nội"
+    let i=10;
+    let f=20.5;
+    let b=true;
+    let s="Hà Nội"
 
-    document.write('i= ' + i)
-    document.write('<br/>')
-    document.write('f= ' + f)
-    document.write('<br/>')
-    document.write('b= ' + b)
-    document.write('<br/>')
-    document.write('s= ' + s)
+    document.write("i= " + i)
+    document.write("<br/>")
+    document.write("f= " + f)
+    document.write("<br/>")
+    document.write("b= " + b)
+    document.write("<br/>")
+    document.write("s= " + s)
 </script>
 <hr>
 <script>
-    var width = 20;
-    var height = 10;
-    var area = width * height;
-
+    let width = 20;
+    let height = 10;
+    let area = width * height;
     document.write('Area= ' + area)
 </script>
 <hr>
