--- a/Hàm 1/giatrinhonhatcuamang.html
+++ b/Hàm 1/giatrinhonhatcuamang.html
@@ -10,15 +10,15 @@
         if(arr.length == 0)
             return -1;
         let min = arr[0];
-        let vitri = 0;
+        let index = 0;
 
         for(let i = 1; i < arr.length; i++){
             if(arr[i] < min){
                 min = arr[i];
-                vitri=i;
+                index=i;
             }
         }
-        return vitri;
+        return index;
     }
     let arr = [7, 12, 6, 9, 20, 56, 89];
     let min = minArray(arr);
