bài tập oop 29.07

--- a/Câu lệnh IF/index_namnhuan.html
+++ b/Câu lệnh IF/index_namnhuan.html
@@ -20,6 +20,14 @@
     } else {
         alert(year + " is NOT a leap year");
     }
+
+    if (year % 4 == 0 && year % 100 != 0) {
+        alert(year + " is a leap year");
+    } else if (year % 400 == 0 && year % 100 == 0) {
+        alert(year + " is a leap year");
+    } else {
+        alert(year + " is NOT a leap year");
+    }
 </script>
 </body>
 </html>
