--- a/Câu lệnh IF/namnhuancaitien.html
+++ b/Câu lệnh IF/namnhuancaitien.html
@@ -24,6 +24,11 @@
     } else {
         alert(year + " is NOT a leap year");
     }
+
+    //từ năm 1700 đến năm 1917; chia hết cho 4 là năm
+    //1918 ngày 256 trong năm là ngày LVT mặc định 26.09.1918, lịch Nga nó tính là sau ngày 31.1 là ngày 14.2
+    // 12 hoặc 13 tháng 9 12.09 hoặc 13.09
+    //sau năm 1918
 </script>
 </body>
 </html>
