--- a/test.html
+++ b/test.html
@@ -119,6 +119,65 @@
         Display();
     }
     window.onload = Display;*/
+    // let arr = [1,2,3,4,5]
+    // let arr1 = ["Định","Nam","Toàn","Dũng","Long"]
+    // let arr2 = ["18","22","19","20","20c"]
+    //
+    // let data = '';
+    // data += "<table style='border: 1px solid; border-collapse: collapse; width: 600px; height: 400px'>"
+    // for (let i = 0; i < arr.length; i++) {
+    //     data += "<tr>"
+    //     data += "<td style='border: 1px solid'>" + arr[i] + "</td>"
+    //     data += "<td style='border: 1px solid'>" + arr1[i] + "</td>"
+    //     data += "<td style='border: 1px solid'>" + arr2[i] + "</td>"
+    //     data += "</tr>"
+    // }
+    // data += "</table>
+    // document.write(data)
+
+    // class Person {
+    //     name
+    //     weight
+    //     height
+    //
+    //     constructor(name, weight, height) {
+    //         this.name = name
+    //         this.weight = weight
+    //         this.height = height
+    //     }
+    //
+    //     getName() {
+    //         return this.name
+    //     }
+    //
+    //     getWeight() {
+    //         return this.weight
+    //     }
+    //
+    //     getHeight() {
+    //         return this.height
+    //     }
+    //
+    //     setName(name) {
+    //         this.name = name
+    //     }
+    //
+    //     setWeight(weight) {
+    //         this.weight = weight
+    //     }
+    //
+    //     setHeight(height) {
+    //         this.height = height
+    //     }
+    // }
+    //
+    // let person1 = new Person("Chính", 50, 1.7)
+    // // alert(person1.getName())
+    // // person1.setName("Ý")
+    // // alert(person1.getName())
+    // let person2 = new Person("Sơn", 55, 1.6)
+    // alert(person2.getName())
+
 </script>
 </body>
 </html>
