--- a/LT hướng đối tượng 1/Funny Circle.html
+++ b/LT hướng đối tượng 1/Funny Circle.html
@@ -7,38 +7,76 @@
 <body>
 <canvas id="myCanvas" width="1500px" height="700px" style="border:1px solid #d3d3d3;"></canvas>
 <script>
-    function Circle(x, y, radius){
-        this.x = x;
-        this.y = y;
-        this.radius = radius;
-    }
-    //hàm random chỉ số màu
-    function getRandomHex(){
-        return Math.floor(Math.random()*255);
+    // function Circle(x, y, radius){
+    //     this.x = x;
+    //     this.y = y;
+    //     this.radius = radius;
+    // }
+    // //hàm random chỉ số màu
+    // function getRandomHex(){
+    //     return Math.floor(Math.random()*255);
+    // }
+    //
+    // function getRandomColor(){
+    //     let red = getRandomHex();
+    //     let green = getRandomHex();
+    //     let blue = getRandomHex();
+    //     return "rgb(" + red + "," + blue + "," + green +")";
+    // }
+    //
+    // function createCircle(){
+    //     let ctx = document.getElementById("myCanvas").getContext("2d");
+    //     let radius = Math.floor(Math.random() * 80); //random bán kính hình tròn từ 0-80
+    //     let color = getRandomColor();
+    //     let x = Math.random() * window.innerWidth; //random vị trí của hình tròn theo chỉ số cửa sổ window
+    //     let y = Math.random() * window.innerHeight;
+    //     let circle= new Circle(x, y, radius);
+    //     ctx.beginPath();
+    //     ctx.arc(circle.x, circle.y, circle.radius, 0, 2 * Math.PI);
+    //     ctx.fillStyle = color;
+    //     ctx.fill();
+    // }
+
+    class Circle {
+        x;
+        y;
+        radius;
+        constructor(x, y, radius) {
+            this.x = x
+            this.y = y
+            this.radius = radius
+        }
+
+        getRandomHex(){
+            return Math.floor(Math.random()*255);
+        }
+
+        getRandomColor(){
+            let red = this.getRandomHex();
+            let blue = this.getRandomHex();
+            let green = this.getRandomHex();
+            return "rgb(" + red + "," + blue + "," + green +")";
+        }
+
+        createCircle(){
+            let ctx = document.getElementById("myCanvas").getContext("2d");
+            let radius = Math.floor(Math.random() * 80); //random bán kính hình tròn từ 0-80
+            let x = Math.random() * window.innerWidth; //random vị trí của hình tròn theo chỉ số cửa sổ window
+            let y = Math.random() * window.innerHeight;
+            let color = this.getRandomColor()
+            ctx.beginPath();
+            ctx.arc(x, y, radius, 0, 2 * Math.PI);
+            ctx.fillStyle = color;
+            ctx.fill();
+        }
     }
 
-    function getRandomColor(){
-        let red = getRandomHex();
-        let green = getRandomHex();
-        let blue = getRandomHex();
-        return "rgb(" + red + "," + blue + "," + green +")";
-    }
+    let circle = new Circle(100, 100, 50)
+    circle.createCircle()
 
-    function createCircle(){
-        let ctx = document.getElementById("myCanvas").getContext("2d");
-        let radius = Math.floor(Math.random() * 80); //random bán kính hình tròn từ 0-80
-        let color = getRandomColor();
-        let x = Math.random() * window.innerWidth; //random vị trí của hình tròn theo chỉ số cửa sổ window
-        let y = Math.random() * window.innerHeight;
-        let circle= new Circle(x, y, radius);
-        ctx.beginPath();
-        ctx.arc(circle.x, circle.y, circle.radius, 0, 2 * Math.PI);
-        ctx.fillStyle = color;
-        ctx.fill();
-    }
     function createMultiCircle() {
         for (let i=1;i<5;i++){
-            createCircle();
+            circle.createCircle();
         }
     }
     createMultiCircle();
