--- a/Toán tử/UseVariable.html
+++ b/Toán tử/UseVariable.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <script>
-    let i = 10;
-    let f = 20.5;
-    let b = true;
-    let s = "Hà Nội"
+    let i=10;
+    let f=20.5;
+    let b=true;
+    let s="Hà Nội"
 
     document.write("i= " + i)
     document.write("<br/>")
@@ -30,11 +30,8 @@
 <script>
     a = prompt('Nhập biến a: ');
     b = prompt('Nhập biến b: ');
-    if (a % b === 0) {
-        alert('a chia hết cho b');
-    } else {
-        alert('a không chia hết cho b')
-    }
+    if (a%b === 0){alert('a chia hết cho b');}
+    else {alert('a không chia hết cho b')}
 </script>
 </body>
 </html>
