--- a/Câu lệnh IF 2/maytinhdongian.html
+++ b/Câu lệnh IF 2/maytinhdongian.html
@@ -4,13 +4,42 @@
     <meta charset="UTF-8">
     <title>Máy tính đơn giản</title>
     <script src="maytinhdongian.js"></script>
+    <style>
+        table {
+            width: 400px;
+            height: 600px;
+            border: 5px solid black;
+            text-align: center;
+            margin: auto;
+        }
+
+        #dis {
+            width: 100%;
+            height: 25%;
+        }
+
+        #display {
+            height: 50px;
+            font-size: 15px;
+        }
+
+        td {
+            width: 25%;
+        }
+
+        td input {
+            width: 80%;
+            height: 70%;
+            font-size: 28px;
+        }
+    </style>
 </head>
 <body>
 <form>
-    <table style="width: 400px; height: 400px; border: 5px solid black" cellpadding="20px">
+    <table>
         <tr>
-            <td colspan="4" style="width: 100%"><label for="display"></label>
-                <input type="text" value="" id="display" size="45"></td>
+            <th id="dis" colspan="4"><label for="display"></label>
+                <input type="text" value="" id="display" size="45"></th>
         </tr>
         <tr>
             <td><input type="button" name="1" value="1" onclick="showValue(value)"></td>
