--- a/Vòng lặp 2/Luyện tập 2/bai1.html
+++ b/Vòng lặp 2/Luyện tập 2/bai1.html
@@ -6,15 +6,15 @@
 </head>
 <body>
 <script>
-    let a=0;
-    let b=1;
-    let count=+prompt("Nhập vào số lượng số cần hiển thị: ")
+    let a = 0;
+    let b = 1;
+    let count = +prompt("Nhập vào số lượng số cần hiển thị: ")
     document.write("Những số cần tìm là: ")
-    for (i=1;i<=count;i++){
-        c=a+b
-        a=b
-        b=c
-        document.write(c+", ")
+    for (let i = 1; i <= count; i++) {
+        c = a + b
+        a = b
+        b = c
+        document.write(c + ", ")
     }
 </script>
 </body>
