--- a/Vòng lặp 2/Luyện tập 1/bai1.html
+++ b/Vòng lặp 2/Luyện tập 1/bai1.html
@@ -7,8 +7,7 @@
 <body>
 <script>
     let text = '';
-    let i;
-    for (i = 1; i <= 100; i++) {
+    for (let i = 1; i <= 100; i++) {
         if (i === 99) {
             alert("Hoàn thành");
             break;
