--- a/Vòng lặp 2/Luyện tập 1/bai7.html
+++ b/Vòng lặp 2/Luyện tập 1/bai7.html
@@ -6,9 +6,8 @@
 </head>
 <body>
 <script>
-    let i;
     let text = "";
-    for (i = 1; i <= 100; i++) {
+    for (let i = 1; i <= 100; i++) {
         if (i % 15 === 0) {
             text = "Số hiển thị: " + "FizzBuzz" + "<br>";
         } else if (i % 5 === 0) {
