--- a/Vòng lặp 2/Luyện tập 2/bai3.html
+++ b/Vòng lặp 2/Luyện tập 2/bai3.html
@@ -6,24 +6,19 @@
 </head>
 <body>
 <script>
-    let i;
-    let j;
-    for (i=1;i<=5;i++){
-        for (j=1;j<=i;j++){
+    for (let i = 1; i <= 5; i++) {
+        for (let j = 1; j <= i; j++) {
             document.write('* ');
         }
         document.write('<br>');
     }
 
-    let g;
-    let h;
-    for (g=5;g>=1;g--){
-        for (h=1;h<=g;h++){
+    for (let g = 5; g >= 1; g--) {
+        for (let h = 1; h <= g; h++) {
             document.write('* ');
         }
         document.write('<br>');
     }
-
 </script>
 </body>
 </html>
