update for sáng ngày 24/08/2021

--- a/Câu lệnh IF 2/sukienbanphim.html
+++ b/Câu lệnh IF 2/sukienbanphim.html
@@ -57,9 +57,9 @@
 
     function init() {
         let imgObj = document.getElementById("img");
-        imgObj.style.position = "relative";
-        imgObj.style.left = "50px";
-        imgObj.style.top = "50px";
+        imgObj.style.position = "absolute";
+        imgObj.style.left = "300px";
+        imgObj.style.top = "300px";
     }
 </script>
 </body>
