--- a/Câu lệnh IF 2/tinhngaytrongthang.html
+++ b/Câu lệnh IF 2/tinhngaytrongthang.html
@@ -24,7 +24,7 @@
                 document.getElementById("display").innerText = "Tháng " + month + " có 31 ngày";
                 break;
             case 2:
-                document.getElementById("display").innerText = "Tháng 2 có 28 hoặc 29";
+                document.getElementById("display").innerText = "Tháng " + month + " có 28 hoặc 29";
                 break;
             case 4:
             case 6:
